--- a/.github/workflows/auto_commit.yml
+++ b/.github/workflows/auto_commit.yml
@@ -1,25 +1,64 @@
-name: Auto Commit (Daily)
+name: Auto commit
 
 on:
+  push:
+    branches:
+      - master
+      
   schedule:
-    - cron: '0 8 * * *'  # Tiap hari jam 8 pagi (UTC), bisa diubah
-  workflow_dispatch:      # Bisa manual run
+    - cron: "0 7,9,12,13,14 * * *" # See https://crontab.guru/#0_7,9,11_*_*_1,3
 
 jobs:
-  auto-commit:
+  auto_commit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+      - name: DEBUG 
+        run: echo "::debug::Ref = ${{github.ref}}"
+      
+      - uses: actions/checkout@v3      
+        with:
+         persist-credentials: false
+         fetch-depth: 0
 
-      - name: Update README.md
+      - name: Modify last update
         run: |
-          echo "Last update: $(date)" >> README.md
+          d=$(date '+%Y-%m-%dT%H:%M:%SZ')
+          echo $d > LAST_UPDATED
 
-      - name: Commit & Push
+      - name: Commit changes
         run: |
-          git config --global user.name 'purwocode'
-          git config --global user.email 'zadbagus7@gmail.com'
-          git add README.md
-          git commit -m "Auto commit $(date)" || echo "Nothing to commit"
-          git push
+          # Set user info for git commit
+          git config --local user.email "zadbagus7@gmail.com"
+          git config --local user.name "purwocode"
+          
+          # Define possible commit messages
+          arr=(
+            "chore(bot): 😂 auto commit"
+            "chore(bot): 😱 auto commit"
+            "chore(bot): 👿 auto commit"
+            "chore(bot): 💩 auto commit"
+            "chore(bot): 🙏 auto commit"
+            "chore(bot): 🙈 auto commit"
+            "chore(bot): 🐐 auto commit"
+            "chore(bot): 🤖 auto commit"
+            "chore(bot): 🟩 auto commit"
+            "chore(bot): 👻 auto commit"
+          )
+          
+          # Randomly choose a number of commits: 4, 10, or 20
+          num_commits=$(( (RANDOM % 3 + 1) * 4 )) # This will give 4, 8, 12 (can adjust multiplier to get other values)
+
+          # Loop to make the random number of commits
+          for ((i = 0; i < num_commits; i++)); do
+            rand=$((RANDOM % ${#arr[@]}))
+            echo "Making commit: ${arr[$rand]}"
+            echo "Update $i at $(date)" > "commit_file_$i.txt"  # create a file to commit with a unique name
+            git add -A
+            git commit -m "${arr[$rand]}"
+          done
+
+      - name: GitHub Push
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          directory: "."
+          github_token: ${{ secrets.GITHUB_TOKEN }}
