--- a/.github/workflows/auto_commit.yml
+++ b/.github/workflows/auto_commit.yml
@@ -33,8 +33,8 @@ jobs:
           
           # Define possible commit messages
           arr=(
-            "chore(bot): 😂 auto commit"
-            "chore(bot): 😱 auto commit"
+            "chore(bot): 🚀 auto commit"
+            "chore(bot): ✨ auto commit"
             "chore(bot): 👿 auto commit"
             "chore(bot): 💩 auto commit"
             "chore(bot): 🙏 auto commit"
